Bug #2755 - On small iphones, gradebook table background color needs adjustment
- this issue was also appearing on the Courses view, however in this case it was only an issue on very small mobile screens
- resolved the issue by taking two of the columns out on really small screens to better accommodate the table

--- a/wp-content/plugins/openlab-gradebook/GradeBook.less
+++ b/wp-content/plugins/openlab-gradebook/GradeBook.less
@@ -401,6 +401,17 @@ td {
 	display: inline-block;
 }
 
+.course-table-wrapper {
+	@media (max-width: 479px) {
+		.course-column-school,
+		.course-column-semester,
+		td.school,
+		td.semester {
+			display: none;
+		}
+	}
+}
+
 .students .selected td,
 .students .selected th,
 .students .selected,
@@ -817,7 +828,6 @@ span.twitter-typeahead {
 			table {
 				border-right: none;
 				border-left: none;
-				width: 100%;
 				table-layout: fixed;
 				width: 100%;
 				th {
